projet compilateur groupe 18/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMI block DOT
Rule 2     block -> VAR declarations BEGIN statements END
Rule 3     declarations -> declarations declaration
Rule 4     declarations -> declaration
Rule 5     declaration -> ID COLON INTEGER SEMI
Rule 6     statements -> statements statement
Rule 7     statements -> statement
Rule 8     statement -> ID ASSIGN expression SEMI
Rule 9     statement -> WRITE LPAREN expression RPAREN SEMI
Rule 10    expression -> expression PLUS expression
Rule 11    expression -> expression MINUS expression
Rule 12    expression -> expression TIMES expression
Rule 13    expression -> expression DIVIDE expression
Rule 14    expression -> LPAREN expression RPAREN
Rule 15    expression -> NUMBER
Rule 16    expression -> ID

Terminals, with rules where they appear

ASSIGN               : 8
BEGIN                : 2
COLON                : 5
DIVIDE               : 13
DOT                  : 1
END                  : 2
ID                   : 1 5 8 16
INTEGER              : 5
LPAREN               : 9 14
MINUS                : 11
NUMBER               : 15
PLUS                 : 10
PROGRAM              : 1
RPAREN               : 9 14
SEMI                 : 1 5 8 9
TIMES                : 12
VAR                  : 2
WRITE                : 9
error                : 

Nonterminals, with rules where they appear

block                : 1
declaration          : 3 4
declarations         : 2 3
expression           : 8 9 10 10 11 11 12 12 13 13 14
program              : 0
statement            : 6 7
statements           : 2 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMI block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMI block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMI block DOT

    SEMI            shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMI . block DOT
    (2) block -> . VAR declarations BEGIN statements END

    VAR             shift and go to state 6

    block                          shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMI block . DOT

    DOT             shift and go to state 7


state 6

    (2) block -> VAR . declarations BEGIN statements END
    (3) declarations -> . declarations declaration
    (4) declarations -> . declaration
    (5) declaration -> . ID COLON INTEGER SEMI

    ID              shift and go to state 10

    declarations                   shift and go to state 8
    declaration                    shift and go to state 9

state 7

    (1) program -> PROGRAM ID SEMI block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMI block DOT .)


state 8

    (2) block -> VAR declarations . BEGIN statements END
    (3) declarations -> declarations . declaration
    (5) declaration -> . ID COLON INTEGER SEMI

    BEGIN           shift and go to state 11
    ID              shift and go to state 10

    declaration                    shift and go to state 12

state 9

    (4) declarations -> declaration .

    BEGIN           reduce using rule 4 (declarations -> declaration .)
    ID              reduce using rule 4 (declarations -> declaration .)


state 10

    (5) declaration -> ID . COLON INTEGER SEMI

    COLON           shift and go to state 13


state 11

    (2) block -> VAR declarations BEGIN . statements END
    (6) statements -> . statements statement
    (7) statements -> . statement
    (8) statement -> . ID ASSIGN expression SEMI
    (9) statement -> . WRITE LPAREN expression RPAREN SEMI

    ID              shift and go to state 16
    WRITE           shift and go to state 17

    statements                     shift and go to state 14
    statement                      shift and go to state 15

state 12

    (3) declarations -> declarations declaration .

    BEGIN           reduce using rule 3 (declarations -> declarations declaration .)
    ID              reduce using rule 3 (declarations -> declarations declaration .)


state 13

    (5) declaration -> ID COLON . INTEGER SEMI

    INTEGER         shift and go to state 18


state 14

    (2) block -> VAR declarations BEGIN statements . END
    (6) statements -> statements . statement
    (8) statement -> . ID ASSIGN expression SEMI
    (9) statement -> . WRITE LPAREN expression RPAREN SEMI

    END             shift and go to state 19
    ID              shift and go to state 16
    WRITE           shift and go to state 17

    statement                      shift and go to state 20

state 15

    (7) statements -> statement .

    END             reduce using rule 7 (statements -> statement .)
    ID              reduce using rule 7 (statements -> statement .)
    WRITE           reduce using rule 7 (statements -> statement .)


state 16

    (8) statement -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 21


state 17

    (9) statement -> WRITE . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 22


state 18

    (5) declaration -> ID COLON INTEGER . SEMI

    SEMI            shift and go to state 23


state 19

    (2) block -> VAR declarations BEGIN statements END .

    DOT             reduce using rule 2 (block -> VAR declarations BEGIN statements END .)


state 20

    (6) statements -> statements statement .

    END             reduce using rule 6 (statements -> statements statement .)
    ID              reduce using rule 6 (statements -> statements statement .)
    WRITE           reduce using rule 6 (statements -> statements statement .)


state 21

    (8) statement -> ID ASSIGN . expression SEMI
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . ID

    LPAREN          shift and go to state 26
    NUMBER          shift and go to state 27
    ID              shift and go to state 24

    expression                     shift and go to state 25

state 22

    (9) statement -> WRITE LPAREN . expression RPAREN SEMI
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . ID

    LPAREN          shift and go to state 26
    NUMBER          shift and go to state 27
    ID              shift and go to state 24

    expression                     shift and go to state 28

state 23

    (5) declaration -> ID COLON INTEGER SEMI .

    BEGIN           reduce using rule 5 (declaration -> ID COLON INTEGER SEMI .)
    ID              reduce using rule 5 (declaration -> ID COLON INTEGER SEMI .)


state 24

    (16) expression -> ID .

    SEMI            reduce using rule 16 (expression -> ID .)
    PLUS            reduce using rule 16 (expression -> ID .)
    MINUS           reduce using rule 16 (expression -> ID .)
    TIMES           reduce using rule 16 (expression -> ID .)
    DIVIDE          reduce using rule 16 (expression -> ID .)
    RPAREN          reduce using rule 16 (expression -> ID .)


state 25

    (8) statement -> ID ASSIGN expression . SEMI
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression

    SEMI            shift and go to state 29
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33


state 26

    (14) expression -> LPAREN . expression RPAREN
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . ID

    LPAREN          shift and go to state 26
    NUMBER          shift and go to state 27
    ID              shift and go to state 24

    expression                     shift and go to state 34

state 27

    (15) expression -> NUMBER .

    SEMI            reduce using rule 15 (expression -> NUMBER .)
    PLUS            reduce using rule 15 (expression -> NUMBER .)
    MINUS           reduce using rule 15 (expression -> NUMBER .)
    TIMES           reduce using rule 15 (expression -> NUMBER .)
    DIVIDE          reduce using rule 15 (expression -> NUMBER .)
    RPAREN          reduce using rule 15 (expression -> NUMBER .)


state 28

    (9) statement -> WRITE LPAREN expression . RPAREN SEMI
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 35
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33


state 29

    (8) statement -> ID ASSIGN expression SEMI .

    END             reduce using rule 8 (statement -> ID ASSIGN expression SEMI .)
    ID              reduce using rule 8 (statement -> ID ASSIGN expression SEMI .)
    WRITE           reduce using rule 8 (statement -> ID ASSIGN expression SEMI .)


state 30

    (10) expression -> expression PLUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . ID

    LPAREN          shift and go to state 26
    NUMBER          shift and go to state 27
    ID              shift and go to state 24

    expression                     shift and go to state 36

state 31

    (11) expression -> expression MINUS . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . ID

    LPAREN          shift and go to state 26
    NUMBER          shift and go to state 27
    ID              shift and go to state 24

    expression                     shift and go to state 37

state 32

    (12) expression -> expression TIMES . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . ID

    LPAREN          shift and go to state 26
    NUMBER          shift and go to state 27
    ID              shift and go to state 24

    expression                     shift and go to state 38

state 33

    (13) expression -> expression DIVIDE . expression
    (10) expression -> . expression PLUS expression
    (11) expression -> . expression MINUS expression
    (12) expression -> . expression TIMES expression
    (13) expression -> . expression DIVIDE expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . ID

    LPAREN          shift and go to state 26
    NUMBER          shift and go to state 27
    ID              shift and go to state 24

    expression                     shift and go to state 39

state 34

    (14) expression -> LPAREN expression . RPAREN
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33


state 35

    (9) statement -> WRITE LPAREN expression RPAREN . SEMI

    SEMI            shift and go to state 41


state 36

    (10) expression -> expression PLUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 10 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 10 (expression -> expression PLUS expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33

  ! PLUS            [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! MINUS           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! TIMES           [ reduce using rule 10 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression PLUS expression .) ]


state 37

    (11) expression -> expression MINUS expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 11 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 11 (expression -> expression MINUS expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33

  ! PLUS            [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! MINUS           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! TIMES           [ reduce using rule 11 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression MINUS expression .) ]


state 38

    (12) expression -> expression TIMES expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 12 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 12 (expression -> expression TIMES expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33

  ! PLUS            [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! MINUS           [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! TIMES           [ reduce using rule 12 (expression -> expression TIMES expression .) ]
  ! DIVIDE          [ reduce using rule 12 (expression -> expression TIMES expression .) ]


state 39

    (13) expression -> expression DIVIDE expression .
    (10) expression -> expression . PLUS expression
    (11) expression -> expression . MINUS expression
    (12) expression -> expression . TIMES expression
    (13) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    SEMI            reduce using rule 13 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 13 (expression -> expression DIVIDE expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    TIMES           shift and go to state 32
    DIVIDE          shift and go to state 33

  ! PLUS            [ reduce using rule 13 (expression -> expression DIVIDE expression .) ]
  ! MINUS           [ reduce using rule 13 (expression -> expression DIVIDE expression .) ]
  ! TIMES           [ reduce using rule 13 (expression -> expression DIVIDE expression .) ]
  ! DIVIDE          [ reduce using rule 13 (expression -> expression DIVIDE expression .) ]


state 40

    (14) expression -> LPAREN expression RPAREN .

    SEMI            reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 14 (expression -> LPAREN expression RPAREN .)


state 41

    (9) statement -> WRITE LPAREN expression RPAREN SEMI .

    END             reduce using rule 9 (statement -> WRITE LPAREN expression RPAREN SEMI .)
    ID              reduce using rule 9 (statement -> WRITE LPAREN expression RPAREN SEMI .)
    WRITE           reduce using rule 9 (statement -> WRITE LPAREN expression RPAREN SEMI .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PLUS in state 36 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 36 resolved as shift
WARNING: shift/reduce conflict for TIMES in state 36 resolved as shift
WARNING: shift/reduce conflict for DIVIDE in state 36 resolved as shift
WARNING: shift/reduce conflict for PLUS in state 37 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 37 resolved as shift
WARNING: shift/reduce conflict for TIMES in state 37 resolved as shift
WARNING: shift/reduce conflict for DIVIDE in state 37 resolved as shift
WARNING: shift/reduce conflict for PLUS in state 38 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 38 resolved as shift
WARNING: shift/reduce conflict for TIMES in state 38 resolved as shift
WARNING: shift/reduce conflict for DIVIDE in state 38 resolved as shift
WARNING: shift/reduce conflict for PLUS in state 39 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 39 resolved as shift
WARNING: shift/reduce conflict for TIMES in state 39 resolved as shift
WARNING: shift/reduce conflict for DIVIDE in state 39 resolved as shift
